--- a/netflix-html/styles.css
+++ b/netflix-html/styles.css
@@ -42,13 +42,13 @@ h5 {
     margin-bottom: 0.5rem;
     line-height: 1.1;
     font-weight: 800;
-    text-align: center;
 }
 
 .card-subtitle {
     font-size: 2rem;
     font-weight: 400;
     margin:1rem 0;
+    margin-left: 10px;
 }
 .email-font-title {
     font-size: 1rem;
